# trading-bot

./: .env.dist  LICENSE  Makefile  README.md  pyproject.toml  setup.py  weights.h5
docs/: Makefile  conf.py  index.rst  make.bat
src/: alpaca_connection.py  first_PM_system.py  trading_system.py
src/models/: bad_AI_PM.py  good_AI_PM.py
